--- a/Frontend/CreateBlog.html
+++ b/Frontend/CreateBlog.html
@@ -25,18 +25,17 @@
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" required>
             </div>
-            <div>
-                <label for="author">Author:</label>
-                <input type="text" id="author" name="author" required>
-            </div>
+           
             <div>
                 <label for="content">Content:</label>
                 <textarea id="content" name="content" rows="10" required></textarea>
             </div>
+
             <div>
-                <label for="tags">Tags:</label>
-                <input type="text" id="tags" name="tags" required>
+                <label for="country">country:</label>
+                <input type="text" id="country" name="country" required>
             </div>
+           
             <button type="submit">Create Blog</button>
         </form>
     </div>
@@ -55,7 +54,7 @@ document.addEventListener('DOMContentLoaded', function () {
         });
 
         try {
-            const response = await fetch('/api/blogs', {
+            const response = await fetch('http://localhost:5000/api/blogs', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
