--- a/Frontend/CreateEvent.html
+++ b/Frontend/CreateEvent.html
@@ -70,7 +70,7 @@ document.addEventListener('DOMContentLoaded', function () {
         });
 
         try {
-            const response = await fetch('http://localhost:5000/api/events', {
+            const response = await fetch('/api/events', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
