--- a/Frontend/CreateBlog.html
+++ b/Frontend/CreateBlog.html
@@ -54,7 +54,7 @@ document.addEventListener('DOMContentLoaded', function () {
         });
 
         try {
-            const response = await fetch('/api/blogs', {
+            const response = await fetch('https://oneworldrise.onrender.com/api/blogs', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
