--- a/Frontend/viewAllEvent.html
+++ b/Frontend/viewAllEvent.html
@@ -43,7 +43,7 @@
             const eventsContainer = document.getElementById('events-container');
 
             try {
-                const response = await fetch('/api/events');
+                const response = await fetch('https://oneworldrise.onrender.com/api/events');
                 if (!response.ok) {
                     throw new Error('Failed to fetch event data');
                 }
